Display:contents elements are "rendered" for innerText.

We incorrectly returned textContent for display:contents elements.

Bug: 839745
Change-Id: I94be65c758a9a4a85693d0364fd305cbc806c162
Reviewed-on: https://chromium-review.googlesource.com/1043945
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562310}
Former-commit-id: 1db9cd28e195d4af700dc841988282de7c58bbd6